@@ -4,6 +4,7 @@ Added: Default converter factories can be overridden (Scott Clasen)
 Added: IParameterValidator
 Added: Don't display "Options:" if none were defined.
 Added: Enforce that the type of the main parameter is a List.
+Fixed: Default values with a validator were being validate at parse() time instead of creation time.
 Fixed: Exception when using an @ file with empty lines between options
 Fixed: OOM when parsing certain descriptions with long URL's in them.
 
